--- a/css/style.css
+++ b/css/style.css
@@ -1,120 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins";
-}
-
-h1,
-h2,
-h3,
-h4,
-p {
-  padding: 0;
-  margin: 0;
-}
-
-body {
-  height: 200vh;
-}
-
-.header {
-  background: #000;
-  line-height: 27px;
-}
-
-.header h3 {
-  font-size: 15px;
-  color: #12ff00;
-  text-align: center;
-
-  font-weight: 600;
-}
-
-.introducao {
-  background: linear-gradient(rgb(9, 9, 9) 0%, rgb(18, 255, 0) 100%);
-  background-position: center;
-  background-repeat: no-repeat;
-  padding: 50px 50px 25px;
-  display: flex;
-  justify-content: center;
-}
-
-.introducao-div {
-  max-width: 1120px;
-  position: relative;
-  z-index: 100;
-}
-
-.introducao h1 {
-  color: #fff;
-  text-align: center;
-  font-size: 48px;
-  font-family: "Roboto";
-  font-weight: 900;
-  line-height: 1;
-}
-
-.introducao p {
-  color: #fff;
-  text-align: center;
-  font-size: 22px;
-  line-height: 1;
-  margin: 20px 0px;
-}
-.introducao img {
-  z-index: 21;
-}
-
-.dese {
-  background: #000;
-  position: relative;
-}
-
-.dese svg {
-  position: absolute;
-  top: -200px;
-  z-index: 0;
-}
-
-.dese .preco {
-  position: relative;
-  color: #fff;
-  z-index: 21;
-  max-width: 1120px;
-  margin: 0 auto;
-  height: 50vh;
-  align-content: center;
-  text-align: center;
-}
-
-.dese .preco h2 {
-  color: #f00;
-  font-size: 3.375rem;
-  font-family: "Roboto";
-  font-weight: 900;
-  line-height: 1;
-  margin-bottom: 9px;
-}
-
-.dese .preco h3 {
-  font-size: 1.875rem;
-  font-family: "Roboto";
-  line-height: 1;
-  font-weight: 600;
-  margin-bottom: 9px;
-}
-
-.dese .preco h3:nth-of-type(2) {
-  font-family: "Poppins";
-  font-weight: 900;
-}
-.dese .preco h1 {
-  font-size: 5rem;
-  color: #12ff00;
-  font-family: "Poppins";
-  font-weight: 900;
-  line-height: 1;
-  text-shadow: 0 0 25px #12ff00;
-  margin-bottom: 9px;
-}
+@import "./style/global.css";
+@import "./style/header.css";
+@import "./style/introducao.css";
+@import "./style/preco.css";
