--- a/css/style/header.css
+++ b/css/style/header.css
@@ -1,11 +1,15 @@
 .header {
   background: #000;
   line-height: 27px;
+  padding: 10px 10px;
 }
 
 .header h3 {
-  font-size: 15px;
+  font-size: 0.938rem;
   color: #12ff00;
   text-align: center;
   font-weight: 600;
+}
+
+@media (min-width: 480px) {
 }
