--- a/css/style/introducao.css
+++ b/css/style/introducao.css
@@ -25,7 +25,7 @@
 .introducao p {
   color: #fff;
   text-align: center;
-  font-size: 22px;
+  font-size: 1.375rem;
   line-height: 1;
   margin: 20px 0px;
 }
@@ -40,5 +40,9 @@
 
   .introducao h1 {
     font-size: 1.5rem;
+  }
+
+  .introducao p {
+    font-size: 1.125rem;
   }
 }
