--- a/css/style/preco.css
+++ b/css/style/preco.css
@@ -1,12 +1,13 @@
 .dese {
   background: #000;
   position: relative;
-  max-width: 1120px;
+  padding: 0px 20px;
 }
 
 .dese svg {
   position: absolute;
   top: -200px;
+  right: 0;
   z-index: 0;
 }
 
@@ -28,7 +29,11 @@
   margin-bottom: 9px;
 }
 
-.dese .preco h3 {
+.titulo-rapido {
+  margin-bottom: 10px;
+}
+
+.preco h3 {
   font-size: 1.875rem;
   font-family: "Roboto";
   line-height: 1;
@@ -48,6 +53,34 @@
   line-height: 1;
   text-shadow: 0 0 25px #12ff00;
   margin-bottom: 9px;
+}
+
+.comprar a {
+  text-decoration: none;
+  background: #12ff00;
+  color: #fff;
+  padding: 15px 30px;
+  display: inline-block;
+  border-radius: 30px;
+  box-shadow: 0 0 10px 0 #01f613b0;
+  font-family: "Poppins";
+  animation: zoon 2.5s ease infinite forwards;
+  transition: 0.5s;
+}
+
+@keyframes zoon {
+  0% {
+    opacity: 1;
+    transform: scale();
+  }
+  50% {
+    opacity: 1;
+    transform: scale(0.7);
+  }
+  100% {
+    opacity: 1;
+    transform: scale();
+  }
 }
 
 @media (max-width: 480px) {
