--- a/css/style/preco.css
+++ b/css/style/preco.css
@@ -83,6 +83,60 @@
   }
 }
 
+.element-passo {
+  color: #fff;
+  margin: 0px auto;
+  max-width: 1080px;
+  background: #2b2b2b;
+  padding: 50px;
+  border: 4px solid #12ff00;
+  border-radius: 30px;
+  box-shadow: 0 0 30px 0 #000;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-top: 15px;
+}
+
+.text h1 {
+  font-size: 2.25rem;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: "Poppins";
+  font-weight: 800;
+  margin-bottom: 7px;
+}
+
+.text p {
+  font-size: 1.188rem;
+  font-family: "Poppins";
+  line-height: 1.3;
+  text-align: center;
+}
+
+.beneficio-container {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+}
+
+.beneficios {
+  padding: 10px;
+  border-radius: 20px;
+  max-width: 200px;
+  height: 293px;
+  background: #090909;
+}
+
+.beneficios h3 {
+  text-transform: capitalize;
+  text-align: center;
+}
+
+.beneficios p {
+  text-align: center;
+}
+
 @media (max-width: 480px) {
   .dese svg {
     top: -50px;
