--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,8 @@
 @import "./style/header.css";
 @import "./style/introducao.css";
 @import "./style/preco.css";
+@import "./style/quantidade.css";
+@import "./style/prova.css";
+@import "./style/oferta.css";
+@import "./style/garanta.css";
+@import "./style/accordion.css";
