--- a/css/style/preco.css
+++ b/css/style/preco.css
@@ -1,7 +1,7 @@
 .dese {
   background: #000;
   position: relative;
-  padding: 0px 20px;
+  padding: 0px 20px 70px;
 }
 
 .dese svg {
@@ -66,6 +66,7 @@
   font-family: "Poppins";
   animation: zoon 2.5s ease infinite forwards;
   transition: 0.5s;
+  margin-bottom: 15px;
 }
 
 @keyframes zoon {
@@ -95,7 +96,6 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
-  margin-top: 15px;
 }
 
 .text h1 {
@@ -132,10 +132,13 @@
 .beneficios h3 {
   text-transform: capitalize;
   text-align: center;
+  font-size: 2.25rem;
 }
 
 .beneficios p {
   text-align: center;
+  font-family: "Poppins";
+  font-size: 1rem;
 }
 
 @media (max-width: 480px) {
